tests/neg/i2673.scala
package Foos //error

class Foo
class foo